--- a/flex.css
+++ b/flex.css
@@ -26,6 +26,7 @@
 /*------------------------------------------------------------*/
 
 .container{
+	height: 700px;
 	display: flex;
-	flex-direction: column-reverse;
+	flex-flow: column-reverse; wrap-reverse;
 }
